--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="app.js"></script>
+    <script  src="/app.js"></script>
 </head>
 <body>
-    <h1>Hello Whello</h1>
+    <h1 class="rub">Hello Whello</h1>
     <p> abc</p>
     <p>def</p>
     <p> nytt inlägg 30/8 2022</p>
+    <button onclick="metod"></button>
 </body>
 </html>
