--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1 class="rub">Hello Whello</h1>
     <p> abc</p>
+    <h2> jkat74 was here</h2>
     <p>def</p>
     <p> nytt inlägg 30/8 2022</p>
     <button onclick="metod"></button>
