--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p>def</p>
     <p> nytt inlägg 30/8 2022</p>
     <button onclick="metod"></button>
+	<h2> jkatr74nti wasa here </h2>
 </body>
 </html>
