ny rubrik för visa matpriser

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <p> nytt inlägg 30/8 2022</p>
     <button onclick="metod"></button>
 	<h2> jkatr74nti wasa here </h2>
+<h2> jkat74 was here again </h2>
 </body>
 </html>
